--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -45,7 +45,8 @@
  <!-- start of products -->
  
      
-     <app-landing-child [products]="productList"></app-landing-child> 
+     <app-landing-child ></app-landing-child> 
+     <app-cart></app-cart>
 
 
  
