--- a/src/app/cart-item/cart-item.component.html
+++ b/src/app/cart-item/cart-item.component.html
@@ -1,3 +1,4 @@
 <div class="cart-item">
-<span>Item 1</span> x <span>4</span> : <strong>{{500 |currency:'&#82;'}}</strong>
+<span>{{cartItem.productName}}</span> x <span> {{cartItem.qty}} </span> : 
+<strong>{{ (cartItem.qty * cartItem.price) |currency:'&#82;'}}</strong>
 </div>
