--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,8 +1,9 @@
-<ul class="list-group">
-    <li class="list-group" *ngFor= "let i of [1,2,3,4,5]">
-        <app-cart-item></app-cart-item>
+<div *ngIf="cartItem.length === 0" class="alert alert-info">Your Cart is Empty</div>
+<ul *ngIf="cartItem.length > 0" class="list-group">
+    <li class="list-group" *ngFor= "let item of cartItem">
+        <app-cart-item [cartItem]="item"></app-cart-item>
     </li>
     <li class="list-group-item active">
-        <strong>Total: {{1100 | currency:'&#82;'}} </strong>
+        <strong>Total: {{ cartTotal | currency:'&#82;'}} </strong>
     </li>
 </ul>
