--- a/src/app/landing-child/landing-child.component.html
+++ b/src/app/landing-child/landing-child.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-md-4" *ngFor="let product of products">
-        <app-product  [products]="productList"></app-product> 
+    <div class="col-md-4" *ngFor = "let product of productList">
+        <app-product [product] = "product"></app-product> 
     </div>
 </div>
 
