--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -163,7 +163,10 @@
     <p class="card-text">{{product.description}}</p>
     <div class="d-flex justify-content-between align-items-center">
       <div class="btn-group">
-        <button type="button" class="btn btn-sm btn-primary product-btn">Add to Cart</button>
+        <button type="button" class="btn btn-sm btn-primary product-btn"
+         (click) = "handleAddToCart()" >
+          Add to Cart
+        </button>
         <button type="button" class="btn btn-sm btn-outline-secondary product-btn btn-outline-danger">Add to Wishlist</button>
       </div>
       
