--- a/src/app/cart-item/cart-item.component.html
+++ b/src/app/cart-item/cart-item.component.html
@@ -1,4 +1,38 @@
+<div class="row">
+    <div class="col-md-4" >
 <div class="cart-item">
-<span>{{cartItem.productName}}</span> x <span> {{cartItem.qty}} </span> : 
-<strong>{{ (cartItem.qty * cartItem.price) |currency:'&#82;'}}</strong>
+
+    <div class="album py-5 bg-light">
+        <div class="card mb-4 shadow-sm ">
+          <img class="bd-placeholder-img card-img-top" width="100%" height="225" src={{cartItem.img}} />
+    <div class="card-body">
+      
+        <p class="card-text text-success">
+            <!-- <strong> {{product.price | currency: '	&#82;'}}</strong> -->
+            <strong>{{cartItem.price.toLocaleString('en-ZA',{style: 'currency', currency:'ZAR'})}}</strong>
+  
+           
+        </p>
+        <h4 class="card-title text-info">{{cartItem.productName}}</h4> x <h5> {{cartItem.qty}}  = 
+        <strong>{{ (cartItem.qty * cartItem.price) |currency:'&#82;'}}</strong></h5>
+      <p class="card-text">{{cartItem.description | slice: 0:80}}...</p>
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="btn-group">
+          <!-- <button type="button" class="btn btn-sm btn-primary product-btn"
+           (click) = "handleAddToCart()" >
+            Add to Cart
+          </button> -->
+          <button type="button" class="btn btn-sm btn-outline-secondary product-btn btn-outline-danger">Add to Wishlist</button>
+        </div>
+        
+      </div>
+    </div>
+        </div>
+        </div>
+<!-- <span>{{cartItem.productName}}</span> 
+x <span> {{cartItem.qty}} </span> : 
+<strong>{{ (cartItem.qty * cartItem.price) |currency:'&#82;'}}</strong> -->
+</div>
+
+    </div>
 </div>
