--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -13,7 +13,8 @@
           <!-- <strong> {{product.price | currency: '	&#82;'}}</strong> -->
           <strong>{{productItem.price.toLocaleString('en-ZA',{style: 'currency', currency:'ZAR'})}}</strong>
 
-          -<i class="far fa-heart"></i>
+          <i *ngIf ="addedToWishlist" class="fas fa-heart float-right" (click)="handleRemoveFromWishlist()"></i>
+          <i *ngIf ="!addedToWishlist" class="far fa-heart float-right" (click)="handleAddToWishlist()"></i>
       </p>
       <h4 class="card-title text-info">{{productItem.name}}</h4>
     <p class="card-text">{{productItem.description | slice: 0:80}}...</p>
