--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,7 +23,7 @@
                         <label for="ml-1" for="remember">Remember Me</label>
 
                     </div>
-                    <button class="btn btn-primary btn-block"  [disabled]="loginForm.invalid">Login</button>
+                    <button class="btn btn-primary btn-block"  [disabled]="loginForm.invalid"><a href="#" class="btn btn-primary">Login</a></button>
                 </form>
 
             </div>
@@ -32,6 +32,6 @@
     </div>
 </div>
 
-<p>
+<!-- <p>
     <a [routerLink]="['/register']"> Register</a>
-</p>
+</p> -->
