--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -10,22 +10,22 @@
     <!-- The slideshow -->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../../assets/pics/photo-1513075675228-cffb4b1b91f7.jfif" alt="Los Angeles" width="1100" height="500">
+        <img src="../../assets/pics/photo-1549465220-1a8b9238cd48.jfif" alt="Los Angeles" width="1100" height="500">
         <div class="carousel-caption">
-            <h3>Hey! <i style='font-size:24px' class='fas'>&#xf2a3;</i></h3>
+            <h3>Hey! </h3>
             <p>Wrapping a gift is a thing of the past.
                  How about you settle down and look through our wide variaty of gift boxes for different ocassions</p>
           </div>
       </div>
       <div class="carousel-item">
-        <img src="../../assets/pics/photo-1549465220-1a8b9238cd48.jfif" alt="Chicago" width="1100" height="500">
+        <img src="../../assets/pics/photo-1512916206820-bd6d503c003e.jfif" alt="Chicago" width="1100" height="500">
         <div class="carousel-caption">
         <p>Finding a gift for someone is already tough process with so much to consider, 
             but why should finding perfect giftbox and size be a nightmare?</p>
       </div>
     </div>
       <div class="carousel-item">
-        <img src="../../assets/pics/photo-1512916206820-bd6d503c003e.jfif" alt="New York" width="1100" height="500">
+        <img src="../../assets/pics/photo-1513075675228-cffb4b1b91f7.jfif" alt="New York" width="1100" height="500">
         <div class="carousel-caption">
         <p>Sit tight and wine down with us and leave a happy gifter!</p>
         </div>
