--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -73,7 +73,7 @@
               <span class="invalid-feedback">Passwords must match.</span>
             </div>
   
-            <button class="btn btn-primary btn-block" [disabled]="registerForm.invalid">Register</button>
+            <button class="btn btn-primary btn-block" [disabled]="registerForm.invalid"><a href="../login/" class="btn btn-primary">Register</a></button>
           </form>
         </div>
       </div>
