--- a/src/app/navbar3/navbar3.component.html
+++ b/src/app/navbar3/navbar3.component.html
@@ -25,7 +25,7 @@
 
         </li> -->
         <li class="dropdown">
-            <a href="#" class="dropbtn">Account</a>
+            <a href="/order" class="dropbtn">Account</a>
             <div class="dropdown-content">
               <a href="/orders">Orders</a>
               <a href="/invoices">Invoices</a>
